# QuickConfig

./: .gitignore  CMakeLists.txt  README.md  compile.bat  run.bat
include/: QuickConfig.h
src/: QuickConfig.cpp  QuickConfig.h
test/: test.cpp
